...
        <customObject id="-2" userLabel="File's Owner" customClass="MainWindowController">
            <connections>
                <outlet property="Filter" destination="hJ3-aJ-ewl" id="fhE-wv-fuc"/>
                <outlet property="addpopover" destination="Aud-f4-jay" id="Hao-5i-fAh"/>
                <outlet property="addpopoverepifield" destination="HfO-zP-Uc4" id="OWL-iB-f0C"/>
...
                        </connections>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="2A6F2A04-5B6F-43F4-8E05-C85F9E36CA05" explicitItemIdentifier="AddTitleInfo" label="Add Title" paletteLabel="Add Title" toolTip="Add Title" image="NSAddTemplate" id="z6P-xx-ceR">
                        <size key="minSize" width="8" height="25"/>
                        <size key="maxSize" width="37" height="25"/>
...
                        </connections>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="1018AB88-E852-402B-A971-9F17CFA4ECD8" explicitItemIdentifier="DeleteTitle" label="Delete Title" paletteLabel="Delete Title" toolTip="Delete Title" image="delete" id="i1C-aH-cA3">
                        <size key="minSize" width="8" height="25"/>
                        <size key="maxSize" width="37" height="25"/>
...
                        </searchField>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="37509770-CBA1-4561-A42C-C26C702223AC" explicitItemIdentifier="search" label="Title Search" paletteLabel="Title Search" id="XqV-bd-LjS">
                        <nil key="toolTip"/>
                        <size key="minSize" width="100" height="22"/>
...
                        </searchField>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="10ABA7C2-0587-4D3E-85FF-130C6769062A" explicitItemIdentifier="editList" label="Edit Title" paletteLabel="Edit Title" toolTip="Edit Title" image="Edit" id="c2Q-tf-fGS">
                        <size key="minSize" width="8" height="25"/>
                        <size key="maxSize" width="37" height="25"/>
...
                        </connections>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="520323CD-5E58-4625-9175-E5E0270F677D" explicitItemIdentifier="yearselect" label="Year" paletteLabel="Year" toolTip="Year" id="Eu4-5q-25Z">
                        <size key="minSize" width="100" height="25"/>
                        <size key="maxSize" width="100" height="25"/>
...
                        </popUpButton>
                    </toolbarItem>
                    <toolbarItem implicitItemIdentifier="74EA59B3-7ACC-45E8-94E3-3BEB34159804" explicitItemIdentifier="seasonselect" label="Season" paletteLabel="Season" toolTip="Season" id="aM7-lP-IG9">
                        <size key="minSize" width="100" height="25"/>
                        <size key="maxSize" width="100" height="25"/>
...
                                <tableColumns>
                                    <tableColumn identifier="title" editable="NO" width="230" minWidth="40" maxWidth="1000" id="9kX-DT-L0h">
                                        <tableHeaderCell key="headerCell" lineBreakMode="truncatingTail" borderStyle="border" title="Title">
                                            <font key="font" metaFont="smallSystem"/>
                                            <color key="textColor" name="headerTextColor" catalog="System" colorSpace="catalog"/>
...
                            <rect key="frame" x="4" y="3" width="89" height="17"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                            <buttonCell key="cell" type="recessed" title="Watching" bezelStyle="recessed" alignment="center" controlSize="small" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="fcQ-Oe-7pb">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                <font key="font" metaFont="miniSystem"/>
...
                            <rect key="frame" x="96" y="3" width="96" height="17"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                            <buttonCell key="cell" type="recessed" title="Completed" bezelStyle="recessed" alignment="center" controlSize="small" state="on" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="tTo-hE-1oy">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES" changeBackground="YES" changeGray="YES"/>
                                <font key="font" metaFont="miniSystem"/>
...
                    <modifierMask key="keyEquivalentModifierMask"/>
                </menuItem>
                <menuItem title="completed" id="owe-g5-4Xe">
                    <modifierMask key="keyEquivalentModifierMask"/>
                </menuItem>
...
                    <modifierMask key="keyEquivalentModifierMask"/>
                </menuItem>
                <menuItem title="8 - Very Good" tag="8" id="xbz-Xu-8C2">
                    <modifierMask key="keyEquivalentModifierMask"/>
                </menuItem>
                <menuItem title="7 - Good" tag="7" id="U2h-5I-5JZ">
                    <modifierMask key="keyEquivalentModifierMask"/>
                </menuItem>
...
                            <rect key="frame" x="238" y="13" width="81" height="32"/>
                            <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                            <buttonCell key="cell" type="push" title="Add" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="GPd-Pc-UA3">
                                <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
                                <font key="font" metaFont="system"/>
...
