...
}

- (void)generateSourceList {
    self.sourceListItems = [[NSMutableArray alloc] init];
    //Library Group
    PXSourceListItem *libraryItem = [PXSourceListItem itemWithTitle:@"LIBRARY" identifier:@"library"];
    PXSourceListItem *animelistItem = [PXSourceListItem itemWithTitle:@"Anime List" identifier:@"animelist"];
    animelistItem.icon = [NSImage imageWithSystemSymbolName:@"list.dash" accessibilityDescription:@""];
    PXSourceListItem *historyItem = [PXSourceListItem itemWithTitle:@"History" identifier:@"history"];
    historyItem.icon = [NSImage imageWithSystemSymbolName:@"clock" accessibilityDescription:@""];
    if ([NSUserDefaults.standardUserDefaults boolForKey:@"donated"]) {
        PXSourceListItem *mangalistItem = [PXSourceListItem itemWithTitle:@"Manga List" identifier:@"mangalist"];
        mangalistItem.icon = [NSImage imageWithSystemSymbolName:@"list.dash" accessibilityDescription:@""];
        libraryItem.children = @[animelistItem, mangalistItem, historyItem];
    }
    else {
        libraryItem.children = @[animelistItem, historyItem];
    }
    // Search
    PXSourceListItem *searchgroupItem = [PXSourceListItem itemWithTitle:@"SEARCH" identifier:@"searchgroup"];
    PXSourceListItem *searchItem = [PXSourceListItem itemWithTitle:@"Anime" identifier:@"search"];
    searchItem.icon = [NSImage imageWithSystemSymbolName:@"tv" accessibilityDescription:@""];
    if ([NSUserDefaults.standardUserDefaults boolForKey:@"donated"]) {
        PXSourceListItem *mangasearchItem = [PXSourceListItem itemWithTitle:@"Manga" identifier:@"mangasearch"];
        mangasearchItem.icon = [NSImage imageWithSystemSymbolName:@"book" accessibilityDescription:@""];
        searchgroupItem.children = @[searchItem, mangasearchItem];
    }
    else {
        searchgroupItem.children = @[searchItem];
    }
    // Discover Group
    PXSourceListItem *discoverItem = [PXSourceListItem itemWithTitle:@"DISCOVER" identifier:@"discover"];
    PXSourceListItem *titleinfoItem = [PXSourceListItem itemWithTitle:@"Title Info" identifier:@"titleinfo"];
    titleinfoItem.icon = [NSImage imageWithSystemSymbolName:@"magnifyingglass" accessibilityDescription:@""];
    PXSourceListItem *seasonsItem = [PXSourceListItem itemWithTitle:@"Seasons" identifier:@"seasons"];
    seasonsItem.icon = [NSImage imageWithSystemSymbolName:@"calendar" accessibilityDescription:@""];
    PXSourceListItem *airingItem = [PXSourceListItem itemWithTitle:@"Airing" identifier:@"airing"];
    airingItem.icon = [NSImage imageWithSystemSymbolName:@"calendar.badge.clock" accessibilityDescription:@""];
    PXSourceListItem *trendingItem = [PXSourceListItem itemWithTitle:@"Trending" identifier:@"trending"];
    trendingItem.icon = [NSImage imageWithSystemSymbolName:@"star" accessibilityDescription:@""];
    discoverItem.children = @[titleinfoItem,seasonsItem, airingItem, trendingItem];
...
