...
                    <rect key="frame" x="0.0" y="0.0" width="563" height="363"/>
                    <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                    <clipView key="contentView" focusRingType="none" id="SrV-wb-9NW">
                        <rect key="frame" x="0.0" y="0.0" width="563" height="363"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <tableView identifier="animesearch" focusRingType="none" verticalHuggingPriority="750" allowsExpansionToolTips="YES" columnAutoresizingStyle="lastColumnOnly" alternatingRowBackgroundColors="YES" columnReordering="NO" multipleSelection="NO" autosaveName="airingtb" headerView="pfz-RW-RLe" id="Z8Z-tY-0mI" customClass="NSTableViewAction">
                                <rect key="frame" x="0.0" y="0.0" width="563" height="340"/>
                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                <size key="intercellSpacing" width="3" height="2"/>
                                <color key="backgroundColor" name="controlBackgroundColor" catalog="System" colorSpace="catalog"/>
                                <color key="gridColor" name="gridColor" catalog="System" colorSpace="catalog"/>
                                <tableColumns>
...
